maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:12: error: not found: value keepHandOOnSideWall
    keepHandOOnSideWall()
    ^