maze.island.IslandMaze.scala.code
override def run() {
  while(getY()!=0){
    if(estFaceMur){
      keepHandOnSideWall()
    }
    else{
      avance()
    }
  }
  while(!estSurBiscuit){
    keepHandOOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall(){
 	if(estFaceMur()){
    droite()
  }  
  if(estFaceMur()){
    droite()
  }
  if(estFaceMur()){
    droite()
  }
  avance()
  gauche()
}